--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT = 8000
-DATABASE=mongodb+srv://stanciu:root@cluster0-us2vz.mongodb.net/test?retryWrites=true&w=majority
+DATABASE=mongodb+srv://stanciu:root@cluster0-us2vz.mongodb.net/bla?retryWrites=true&w=majority
